# NPP-plugin-Empty-files-as-Unicode

./: .gitignore  ALF_DBGINFO.hpp  CMakeLists.txt  Plugin.hpp  README.md  appveyor.yml  main.cpp
docs/: README.md
extern-api/cppx/@impl/for-windows/: console-output.cpp
extern-api/cppx/class_kind/: No_copy_or_move.hpp
extern-api/cppx/debug/: CPPX_DBGINFO.hpp  console_output.hpp
extern-api/cppx/process/: exit_codes.hpp
extern-api/windows/: windows_h.hpp
plugin/: ALF_DBGINFO.hpp  Npp.hpp  Plugin.hpp  menu.cpp  plugin-dll-interface.cpp  plugin-name.hpp  plugin-singleton.hpp  scintilla.hpp
plugin/cppx-impl/: console-output.cpp
source/extern-api/cppx/debug/: console-output.hpp
source/extern-api/cppx/stdlib-wrappers/: Map_.hpp
source/extern-api/cppx/text/: stdstring_util.hpp
source/extern-api/notepad++/: basic-types.hpp  plugin-dll-interface.hpp
source/plugin/: Npp.hpp  Plugin.hpp  menu.cpp  menu.hpp  plugin-dll-interface.cpp  plugin-singleton.hpp  scintilla.hpp
source/plugin/@libraries/: tinyxml2.include.cpp
source/reusable/cppx/: const_like_.hpp
source/reusable/cppx/@impl/for-windows/: console-output.cpp
source/reusable/cppx/debug/: CPPX_DBGINFO.hpp  console-output.hpp
source/reusable/cppx/process/: exit-codes.hpp
source/reusable/cppx/stdlib-wrappers/: Map_.hpp  Set_.hpp
source/reusable/cppx/text/: stdstring_util.hpp
source/reusable/npp/: Config.hpp  Encoding_config.hpp  Npp.hpp  appname.hpp  paths.hpp  scintilla.hpp
source/reusable/stdlib/_impl/: windows_char_path.hpp
source/reusable/stdlib/extension/: Size.hpp
source/reusable/stdlib/fix/: math_constants_availability.hpp
source/reusable/winutil/: hresult-success-checking.hpp  known-paths.hpp  registry.hpp
source/reusable/winutil/lib-envelope/: com.hpp
source/reusable/wrapped-notepad++/: basic-types.hpp  command-ids.hpp  plugin-dll-interface.hpp  window-messages.hpp
source/reusable/wrapped-tinyxml2/: all.hpp
source/reusable/wrapped-windows/: objbase_h.hpp  shlobj_h.hpp
source/third-party-libraries/tinyxml2/: tinyxml2.h
(+2 files in other folders)
